--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class="page">
 
-<h1><strong>My Timetable</strong> </h1>
+<h1><strong>My School Timetable</strong> </h1>
 <p><strong>By <a href="https://github.com/ManifoldHydra80/">ManifoldHydra80</a></strong></p>
 <p id="error" class="error"></p>
 <h1 id="weekday" class="dayofweek"><strong><span class="dayofweekHL"></span></strong></h1>
